# EventPlotter

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: build-and-test.yml  tests.yml
docs/: conf.py  examples.rst  index.rst  setup.rst
examples/: lhe-analysis.py  plot-event.py
src/EventPlotter/: __init__.py  event.py  particle.py  plotter.py  reader.py
src/event-plotter/: event.py  particle.py
test/: test_event.py  test_particle.py  test_plotter.py  test_reader.py
